added css files

--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <html>
     <head>
         <meta charset = "UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+        <img class="cover-photo food" src="images/food-cover-photo.jpeg" alt="Cover photo of food">
         <ul>
-            <li><a href="recipes/pizza.html">Pizza</a></li>
-            <li><a href="recipes/cookies.html">Cookies</a></li>
+            <li><a id="pizza" href="recipes/pizza.html">Pizza</a>
+                <img class="pizza-image" src="https://cdn-icons-png.flaticon.com/512/3132/3132693.png" alt="image of pizza slice"></li>
+            <br>
+            <li><a id ="cookies" href="recipes/cookies.html">Cookies</a>
+                <img class="cookies-image" src="https://cdn-icons-png.flaticon.com/512/1047/1047711.png" alt="image of cookies">
+            </li>
         </ul>
     </body>
 </html>
