--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="cookies-style.css">
     <title>Cookies</title>
 </head>
 <body>
     <h1>Cookies</h1>
     
-    <img src ="https://c.tenor.com/mNjpKjB8Xz8AAAAC/cookies.gif" alt ="A gif of cookies monster eating cookies">
+    <img class="cookies-image" src ="https://c.tenor.com/mNjpKjB8Xz8AAAAC/cookies.gif" alt ="A gif of cookies monster eating cookies">
 
     <h2> Description</h2>
     <p>These classic cookies are a go-to sweet treat that are easy to whip up and store well-if they 
