--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="pizza-style.css">
     <title>Pizza</title>
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src ="https://bestanimations.com/media/pizza/1929950421pizza-slice-cheese-close-up-gif.gif" alt ="A gif of pizza">
+    <img class="pizza-image" src ="https://bestanimations.com/media/pizza/1929950421pizza-slice-cheese-close-up-gif.gif" alt ="A gif of pizza">
 
     <h2> Description</h2>
     <p>This is a great recipe when you don't want to wait for the dough to rise. 
